[tool.poetry]
name = "treasury-prime-py"
version = "0.1.0"
description = ""
authors = ["smfarrelly <steve@treasuryprime.com>"]
readme = "README.md"
packages = [{include = "treasury_prime_py"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
faker = "^18.9.0"
ipython = "^8.13.2"
black = "^23.3.0"
munch = "^3.0.0"
shortuuid = "^1.0.11"
flakeheaven = "^3.3.0"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.12.0"
flake8-eradicate = "^1.4.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
flake8-mutable = "^1.2.0"
isort = "^5.12.0"

[tool.flakeheaven]
exclude = ["README.rst", "README.md"]
format = "colored"
max_line_length = 88
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakeheaven.plugins]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
mccabe = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
